# bild

./: CMakeLists.txt  README.md
src/: bild.c  bild.h  decomposition.c  decomposition.h  globals.h  huffman.c  huffman.h  image.c  image.h  main.c  pack.c  pack.h  quantize.c  quantize.h  rle.c  rle.h  signal.c  signal.h  types.h  wavelet.c  wavelet.h
